[package]
name = "wordlr"
version = "0.1.0"
authors = ["Alex Tran <lbhtran@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
rand = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
